[tool.poetry]
name = "lost-in-middle-tester"
version = "1.0.0"
description = "CLI tool to test and visualize the Lost-in-the-Middle phenomenon in LLMs"
authors = ["Chance Dean <novelnexusai@outlook.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "lost_in_middle_tester", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.9.0"
rich = "^13.7.0"
openai = "^1.10.0"
anthropic = "^0.18.0"
matplotlib = "^3.8.0"
tenacity = "^8.2.0"
pydantic = "^2.5.0"
tiktoken = "^0.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^24.1.0"
ruff = "^0.2.0"

[tool.poetry.scripts]
lost-in-middle-tester = "lost_in_middle_tester.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
